<TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:stretchColumns="yes"
        tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blankTextView"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PlayerOneTextView"
            android:text="@string/player1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/PlayerTwoTextView"
            android:layout_column="4" />

    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ones"
                android:id="@+id/onesTextView"
                android:layout_column="0"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OnesSpinner"
            android:layout_column="2"/>

    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twos"
                android:id="@+id/twosTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threes"
                android:id="@+id/threesTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fours"
                android:id="@+id/foursTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fives"
                android:id="@+id/fivesTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixes"
                android:id="@+id/sixesTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_top"
                android:id="@+id/totalTopTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_of_a_kind"
                android:id="@+id/threeOfAKindTextView"
                android:layout_column="0"/>

    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_of_a_kind"
                android:id="@+id/fourOfAKindTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_house"
                android:id="@+id/fullHouseTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_straight"
                android:id="@+id/smallStraightTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_straight"
                android:id="@+id/largeStraightTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flush"
                android:id="@+id/yahtzeeTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chance"
                android:id="@+id/chanceTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_bottom"
                android:id="@+id/totalBottomTextView"
                android:layout_column="0"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/totalTextView"
                android:layout_column="0"/>
    </TableRow>

</TableLayout>